--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+/*
+Theme Name: Kino Koszyk theme
+Theme URI:
+Author: 
+Author URI:
+Description: A new theme for the Kino Koszyk site
+Version: 1.0
+*/
+
 * {
   box-sizing: border-box;
 }
