--- a/css/header.css
+++ b/css/header.css
@@ -1,29 +1,33 @@
-header {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  height: 100vh;
-  width: 30%;
-  background-color: #1f1d19;
-}
+  header {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    height: 100vh;
+    width: 20vw;
+    background-color: #1f1d1979;
+    position: fixed;
+    position: ;
+  }
 
-nav {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  position: sticky;
-  padding: 2rem;
-  height: 60vh;
-  width: 10rem;
-}
+  nav {
+    display: flex;
+    flex-direction: column;
+    /* justify-content: space-around; */
+    /* position: sticky; */
+    padding: 2rem;
+    height: 60vh;
+    width: 10rem;
+  }
 
-nav a {
-  text-decoration: none;
-  color: white;
-  width: 10rem;
-}
+  nav a {
+    text-decoration: none;
+    color: white;
+    width: 10rem;
+  }
 
-nav img {
-  justify-self: center;
-  width: 15rem;
-}
+  
+
+  nav img {
+    justify-self: center;
+    width: 15rem;
+  }
