--- a/css/footer.css
+++ b/css/footer.css
@@ -9,7 +9,7 @@
     margin-bottom: 0;
     list-style-type: none;
     color: white;
-    font-family: sans-serif;
+    font-family: "Montserrat";
     padding: 1rem;
 }
 
