--- a/css/header.css
+++ b/css/header.css
@@ -2,7 +2,7 @@ header {
   width: 18rem;
   height: 100%;
   /* padding: 3.75rem 2rem 0 2rem; */
-  padding: 3.75rem 3.75rem 0 3.75rem;
+  /* padding: 3.75rem 3.75rem 0 3.75rem; */
   background-color: #1f1d19;
 
   display: flex;
@@ -80,11 +80,11 @@ nav a:hover:not(.logo) {
 }
 
 li:has(.nav__list_item.active) {
-  background-color: #FBF9F4;
+  background-color: #fbf9f4;
 }
 
 .nav__list_item.active {
-  color: #1F1D19;
+  color: #1f1d19;
 }
 
 .nav__page_indicator {
