--- a/css/header.css
+++ b/css/header.css
@@ -2,7 +2,7 @@ header {
   width: 18rem;
   height: 100%;
   /* padding: 3.75rem 2rem 0 2rem; */
-  /* padding: 3.75rem 3.75rem 0 3.75rem; */
+  padding: 3.75rem 3.75rem 0 3.75rem;
   background-color: #1f1d19;
 
   display: flex;
