--- a/css/header.css
+++ b/css/header.css
@@ -2,29 +2,33 @@ header {
   width: 18rem;
   height: 100%;
   /* padding: 3.75rem 2rem 0 2rem; */
-  padding: 3.75rem 3.75rem 0 3.75rem;
   background-color: #1f1d19;
-
+  
   display: flex;
   flex-direction: column;
-  justify-content: start;
   align-items: center;
   position: fixed;
-
+  
   font-family: "Montserrat";
-  /* FOR DEV USE TO SHOW "print_a" */
+  /* FOR DEV USE TO SHOW "print_a" comment out width as well */
   /* overflow: scroll; */
 }
 
 nav {
+  padding: 3.75rem 3.75rem 3.75rem 3.75rem;
   display: flex;
   flex-direction: column;
-  gap: 5rem;
+  justify-content: space-between;
+
+  /* Responsive Solution /Tommi */
+  height: 824px;
 }
+
 nav div {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  margin-bottom: 5rem;
 }
 
 nav div img {
@@ -42,13 +46,17 @@ nav ul {
   display: flex;
   flex-direction: column;
   list-style: none;
-  gap: 1.75rem;
+  /* gap: 1.75rem; */
+  
+  /* Responsive Solution /Tommi */
+  justify-content: space-between;
+  height: 100%;
 }
 
 nav a:not(.logo) {
   text-decoration: none;
   color: white;
-  /* width: 10rem; */
+  width: 100%;
 
   font-size: 1.125rem;
   font-weight: 400;
@@ -61,11 +69,17 @@ nav a:not(.logo) {
   text-decoration: none;
 }
 
+/* List item "Joanna" */
 nav li:last-of-type {
-  width: 10.2rem;
+  /* width: 10.2rem; */
+  /* width: 100%; */
   margin-top: 3.25rem;
-  padding: 1.25rem;
   border: solid white 1px;
+}
+
+nav li:last-of-type > a {
+  width: 100%;
+  padding: 1.25rem;
 }
 
 nav a:hover:not(.logo) {
