--- a/css/header.css
+++ b/css/header.css
@@ -1,10 +1,12 @@
 header {
-  width: 18rem;
+  /* width: 18rem; */
+  z-index: 2;
+  width: 100%;
   height: 100%;
-  /* padding: 3.75rem 2rem 0 2rem; */
-  background-color: #1f1d19;
+  background-color: var(--color-warm-black);
   
-  display: flex;
+  /* display: flex; */
+  display: none;
   flex-direction: column;
   align-items: center;
   position: fixed;
@@ -39,7 +41,7 @@ nav div h1 {
   font-weight: 400;
   font-size: 1.5rem;
   line-height: 30px;
-  color: white;
+  color: var(--color-warm-white);
 }
 
 nav ul {
@@ -55,7 +57,7 @@ nav ul {
 
 nav a:not(.logo) {
   text-decoration: none;
-  color: white;
+  color: var(--color-warm-white);
   width: 100%;
 
   font-size: 1.125rem;
@@ -71,20 +73,48 @@ nav a:not(.logo) {
 
 /* List item "Joanna" */
 nav li:last-of-type {
-  /* width: 10.2rem; */
+  width: 10.2rem;
   /* width: 100%; */
   margin-top: 3.25rem;
-  border: solid white 1px;
+  /* border: solid white 1px; */
+
+
+  width: 100%;
+  height: 6.375rem;
+  position: relative;
+  display: flex;
+  justify-content: center;
 }
 
 nav li:last-of-type > a {
-  width: 100%;
+  /* width: 100%; */
   padding: 1.25rem;
+
+
+  width: 122%;
+  position: absolute;
+  border: var(--color-warm-white) solid 0.125rem;
 }
 
 nav a:hover:not(.logo) {
   font-weight: 700;
   letter-spacing: 0em;
+}
+
+nav li:last-of-type > a:hover {
+  background-color: var(--color-grey-700);
+  
+  font-weight: 400;
+  letter-spacing: 0.03em;
+}
+
+nav li:last-of-type > a.active:hover {
+  background-color: var(--color-grey-700);
+  color: var(--color-warm-white);
+  border: var(--color-warm-white) solid 0.125rem;
+  
+  font-weight: 400;
+  letter-spacing: 0.03em;
 }
 
 .nav__list_item {
@@ -93,12 +123,13 @@ nav a:hover:not(.logo) {
   align-items: center;
 }
 
-li:has(.nav__list_item.active) {
-  background-color: #fbf9f4;
+li:has(.nav__list_item.active) > a {
+  background-color: var(--color-warm-white);
+  border: var(--color-warm-black) solid 0.125rem;
 }
 
 .nav__list_item.active {
-  color: #1f1d19;
+  color: var(--color-warm-black);
 }
 
 .nav__page_indicator {
@@ -106,4 +137,18 @@ li:has(.nav__list_item.active) {
   height: 1.5rem;
   position: absolute;
   left: -1rem;
+}
+
+@media screen and (min-width: 700px) {
+  header {
+    width: 100%;
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  header {
+    width: 18rem;
+    display: flex;
+  }
 }
