--- a/css/footer.css
+++ b/css/footer.css
@@ -1,7 +1,7 @@
 .footer {
     margin-left: 18rem;
     margin-bottom: 0;
-    margin-top: 5rem;
+    /* margin-top: 5rem; */
     list-style-type: none;
     color: var(--color-warm-white);
     border-top: 2px solid var(--color-warm-black);
@@ -11,6 +11,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: var(--color-warm-white);
 }
 
 .footer-contact-text h3 {
