--- a/css/photos.css
+++ b/css/photos.css
@@ -1,13 +1,52 @@
 .photos {
+    position: fixed;
     display: flex;
     flex-direction: column;
-    gap: 5rem;
+    /* gap: 5rem; */
+    gap: 1.25rem;
 
     width: 100%;
+    /* height: 28.125rem; */
 }
+
+.photos__title {
+    font-size: 2.5rem;
+    line-height: 4.75rem;
+    font-weight: normal;
+}
+
+.photos__top_container-content {
+    display: flex;
+    flex-direction: column;
+    max-width: 43.375rem;
+    gap: 1.25rem;
+}
+
+.photos__top_container-content > p {
+    font-size: 1rem;
+    line-height: 1.625rem;
+    font-weight: normal;
+}
+
+.photos__top_container-content > p > a {
+    font-size: 1.25rem;
+    line-height: 1.875rem;  
+    font-weight: 600;
+    text-decoration: underline;
+}
+
 
 .photos_gallery {
     display: flex;
+
+
+    z-index: 1;
+    margin-top: 33.125rem;
+    background-color: var(--color-warm-white);
+}
+
+.photos_gallery.gallery-z {
+    z-index: -1;
 }
 
 .photos_gallery__wrapper.mobile_wrapper{
@@ -61,11 +100,34 @@
 }
 
 @media screen and (min-width: 1000px) {
+
+    .photos__title {
+        font-size: 4.25rem;
+    }
+
+    .photos__top_container-content > p {
+        font-size: 1.125rem;
+        line-height: 1.625rem;
+        font-weight: normal;
+    }
+
+    .photos__top_container-content > p > a {
+        font-size: 1.5rem;
+        line-height: 1.875rem;  
+        font-weight: 600;
+        text-decoration: underline;
+    }
+
+    .photos_gallery {
+        margin-top: 33.125rem;
+    }
+
     .photos_gallery__wrapper.mobile_wrapper{
         display: none;
     }
     
     .photos_gallery__wrapper.desktop_wrapper{
+        margin-bottom: 5rem;
         display: flex;
     }
 
