--- a/style.css
+++ b/style.css
@@ -43,9 +43,10 @@ section:not(.home) {
 }
 
 .portrait img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
+  width: 471px;
+  height: 454px;
+  object-fit: cover;
+  object-position: left top;
 }
 
 li {
