--- a/css/footer.css
+++ b/css/footer.css
@@ -1,93 +1,94 @@
 .footer {
-    margin-left: 18rem;
-    margin-bottom: 0;
-    /* margin-top: 5rem; */
-    list-style-type: none;
-    color: var(--color-warm-white);
-    border-top: 2px solid var(--color-warm-black);
+  margin-left: 18rem;
+  margin-bottom: 0;
+  /* margin-top: 5rem; */
+  list-style-type: none;
+  color: var(--color-warm-white);
+  border-top: 2px solid var(--color-warm-black);
+  position: relative;
 }
 
 .footer-contact-wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: var(--color-warm-white);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: var(--color-warm-white);
 }
 
 .footer-contact-text h3 {
-    color: var(--color-warm-black);
-    font-size: 2rem;
-    line-height: 2.45rem;
-    margin-top: 4rem;
-    margin-bottom: 2.5rem;
-    font-weight: normal;
+  color: var(--color-warm-black);
+  font-size: 2rem;
+  line-height: 2.45rem;
+  margin-top: 4rem;
+  margin-bottom: 2.5rem;
+  font-weight: normal;
 }
 
 .footer-contact-link {
-    font-size: 1.125rem;
-    line-height: 1.625rem;
-    font-weight: normal;
-    border: 2px solid var(--color-warm-black);
-    padding: 1.25rem; 
-    margin-bottom: 4rem;
-    cursor: pointer;
-} 
+  font-size: 1.125rem;
+  line-height: 1.625rem;
+  font-weight: normal;
+  border: 2px solid var(--color-warm-black);
+  padding: 1.25rem;
+  margin-bottom: 4rem;
+  cursor: pointer;
+}
 
 .footer-contact-link:visited {
-    color: var(--color-warm-black);
+  color: var(--color-warm-black);
 }
 
 .footer-contact-link:hover {
-    background-color: var(--color-grey-300);
+  background-color: var(--color-grey-300);
 }
 
 .footer-contact-link:active {
-    background-color: var(--color-grey-600);
+  background-color: var(--color-grey-600);
 }
 
 .footer-address-wrapper {
-    display: flex;
-    flex-direction: row;
-    justify-content: end;
-    padding: 2rem 2rem 1rem 0;
-    background-color: #3C3C3C;
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  padding: 2rem 2rem 1rem 0;
+  background-color: #3c3c3c;
 }
 
 .footer-address-text {
-    display: flex;
-    justify-content: flex-start;
-    flex-direction: column;
-    flex-wrap: wrap;
-    padding-right: 1rem;
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  flex-wrap: wrap;
+  padding-right: 1rem;
 }
 
 .footer-address-text li {
-    font-size: 1.125rem;
-    line-height: 1.625rem;
-    font-weight: normal;
-    padding-bottom: 0.25rem;
+  font-size: 1.125rem;
+  line-height: 1.625rem;
+  font-weight: normal;
+  padding-bottom: 0.25rem;
 }
 
 .footer-address-image {
-    width: 371px;
-    padding-bottom: 3rem;
+  width: 371px;
+  padding-bottom: 3rem;
 }
 
 .footer-address-text li:first-child {
-    font-size: 2rem;
-    line-height: 2.45rem;
-    font-weight: normal;
-    padding-bottom: 0.5rem;
+  font-size: 2rem;
+  line-height: 2.45rem;
+  font-weight: normal;
+  padding-bottom: 0.5rem;
 }
 
 .footer-address-text li:nth-of-type(3) {
-    padding-bottom: 2.43rem;
+  padding-bottom: 2.43rem;
 }
 
 .footer-address-text li:last-child {
-    font-size: 1rem;
-    line-height: 1.625rem;
-    font-weight: 300;
-    margin-top: auto;
-    padding-bottom: 0;
+  font-size: 1rem;
+  line-height: 1.625rem;
+  font-weight: 300;
+  margin-top: auto;
+  padding-bottom: 0;
 }
