--- a/css/dropdown.css
+++ b/css/dropdown.css
@@ -1,19 +1,15 @@
 .dropdown-container-content {
   position: relative;
-
   margin-top: 1.25rem;
 }
 
 .dropdown-select-container {
   position: absolute;
   cursor: pointer;
-  /* max-height: 6.5vh; */
-  /* width: 14rem; */
-  transition: max-height 0.3s ease-in-out;
+  max-height: 4rem;
+  transition: max-height 0.4s ease-in-out;
   overflow: hidden;
   background-color: var(--color-warm-white);
-
-  /* width: 18.438rem; */
   width: 17rem;
 }
 
@@ -21,19 +17,15 @@
   opacity: 0;
   text-decoration: none;
   transition: opacity 1s ease-in-out;
-  display: none;
 }
 
 .dropdown-select-container-open {
-  /* max-height: 20vh; */
-
-  max-height: 50vh;
+  max-height: 40vh;
   overflow: scroll;
 }
 
 .dropdown-select-container-open a {
   opacity: 1;
-  display: flex;
 }
 
 .dropdown-select-placeholder {
@@ -41,8 +33,6 @@
   justify-content: space-between;
   padding: 1rem;
   border: solid 1px black;
-
-  
 
   font-size: 1rem;
   line-height: 1.62rem;
@@ -66,11 +56,9 @@
 }
 
 @media screen and (min-width: 750px) {
-
 }
 
 @media screen and (min-width: 1000px) {
-
   .dropdown-container-content {
     margin-top: 3.75rem;
   }
