--- a/style.css
+++ b/style.css
@@ -38,13 +38,13 @@ section:not(.home) {
 }
 
 .portrait {
-  width: 471px;
-  height: 454px;
+  width: 165px;
+  height: 159px;
 }
 
 .portrait img {
-  width: 471px;
-  height: 454px;
+  width: 165px;
+  height: 159px;
   object-fit: cover;
   object-position: left top;
 }
@@ -77,5 +77,17 @@ a {
 
   section:first-of-type:not(.home) {
     padding-top: 5rem;
+  }
+
+  .portrait {
+    width: 471px;
+    height: 454px;
+  }
+
+  .portrait img {
+    width: 471px;
+    height: 454px;
+    object-fit: cover;
+    object-position: left top;
   }
 }
