--- a/css/header.css
+++ b/css/header.css
@@ -2,11 +2,11 @@ header {
   /* width: 18rem; */
   z-index: 2;
   width: 100%;
-  height: 100%;
-  background-color: var(--color-warm-black);
+  height: 4rem;
+  background-color: var(--color-warm-white);
+  border-bottom: 1px solid var(--color-warm-black);
   
-  /* display: flex; */
-  display: none;
+  /* display: flex;
   flex-direction: column;
   align-items: center;
   position: fixed;
@@ -16,14 +16,49 @@ header {
   /* overflow: scroll; */
 }
 
+.test {
+  width: calc(100% - 2.5rem);
+  margin: auto;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.mobile-logo {
+  display: block;
+}
+
+.hamburger {
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+  z-index: 100;
+}
+
+.hamburger img {
+  display: block;
+}
+
 nav {
-  padding: 3.75rem 3.75rem 3.75rem 3.75rem;
+  padding: 1.5rem 3.75rem 3.75rem 3.75rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
+  background-color: var(--color-warm-black);
+  height: 100%;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 2;
+  transform: translateY(-100%);
+  transition: transform 0.1s ease-in;
 
   /* Responsive Solution /Tommi */
-  height: 824px;
+  /* height: 824px; */
+
 }
 
 nav div {
@@ -31,10 +66,13 @@ nav div {
   flex-direction: column;
   gap: 1rem;
   margin-bottom: 5rem;
+  display: none;
+  flex-wrap: wrap;
 }
 
 nav div img {
   width: 10.813rem;
+  margin-bottom: 1rem;
 }
 
 nav div h1 {
@@ -42,17 +80,23 @@ nav div h1 {
   font-size: 1.5rem;
   line-height: 30px;
   color: var(--color-warm-white);
+  display: none;
 }
 
 nav ul {
   display: flex;
   flex-direction: column;
   list-style: none;
-  /* gap: 1.75rem; */
+  gap: 1.5rem;
+  align-items: center;  
   
   /* Responsive Solution /Tommi */
   justify-content: space-between;
-  height: 100%;
+  
+}
+
+nav li:last-of-type {
+  display: none;
 }
 
 nav a:not(.logo) {
@@ -82,7 +126,7 @@ nav li:last-of-type {
   width: 100%;
   height: 6.375rem;
   position: relative;
-  display: flex;
+  display: none;
   justify-content: center;
 }
 
@@ -137,12 +181,57 @@ li:has(.nav__list_item.active) > a {
   height: 1.5rem;
   position: absolute;
   left: -1rem;
+  display: none;
 }
 
-@media screen and (min-width: 700px) {
+@media screen and (min-width: 1000px) {
+  .test {
+    display: none;
+  }
+  
   header {
     width: 100%;
+    height: 100%;
+    background-color: var(--color-warm-black);
+    border: none;
+    position: fixed;  
+  }
+
+  .hamburger {
     display: none;
+  }
+
+  nav {
+    padding: 3.75rem;
+    align-items: flex-start;
+    background-color: inherit;
+    height: 100%;
+    display: block;
+    position: inherit;
+    width: inherit;
+    transform: translateY(0);
+  }
+
+  nav div {
+    display: flex;
+  }
+
+  nav div h1 {
+    display: block;
+  }
+
+  nav ul {
+    height: 100%;
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
+
+  .nav__page_indicator {
+    display: block;
+  }
+
+  nav li:last-of-type {
+    display: flex;
   }
 }
 
@@ -151,4 +240,8 @@ li:has(.nav__list_item.active) > a {
     width: 18rem;
     display: flex;
   }
+}
+
+.showMenu {
+  transform: translateY(0);
 }
