--- a/css/header.css
+++ b/css/header.css
@@ -35,14 +35,40 @@ header {
   background-color: transparent;
   border: none;
   z-index: 100;
+  transition: all 0.2s ease-out;
 }
 
-.hamburger img {
-  display: block;
+.hamburger-line {
+  width: 2rem;
+  height: 0.125rem;
+  margin: 0 0 0.375rem 0;
+  background: var(--color-warm-black); 
+}
+
+.hamburger-line:last-of-type {
+  margin: 0;
+}
+
+.hamburger.close {
+  transform: rotate(180deg);
+  position: fixed;
+  right: 1.25rem;
+}
+
+.hamburger.close .hamburger-line:nth-child(1) {
+  transform: rotate(45deg) translate(5px, 5px);
+}
+
+.hamburger.close .hamburger-line:nth-child(2) {
+  opacity: 0;
+}
+
+.hamburger.close .hamburger-line:nth-child(3) {
+  transform: rotate(-45deg) translate(7px, -6px);
 }
 
 nav {
-  padding: 1.5rem 3.75rem 3.75rem 3.75rem;
+  padding: 2.5rem 3.75rem 3.75rem 3.75rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -87,16 +113,12 @@ nav ul {
   display: flex;
   flex-direction: column;
   list-style: none;
-  gap: 1.5rem;
+  gap: 2.5rem;
   align-items: center;  
   
   /* Responsive Solution /Tommi */
   justify-content: space-between;
   
-}
-
-nav li:last-of-type {
-  display: none;
 }
 
 nav a:not(.logo) {
@@ -119,14 +141,13 @@ nav a:not(.logo) {
 nav li:last-of-type {
   width: 10.2rem;
   /* width: 100%; */
-  margin-top: 3.25rem;
+  /* margin-top: 3.25rem; */
   /* border: solid white 1px; */
-
 
   width: 100%;
   height: 6.375rem;
   position: relative;
-  display: none;
+  /* display: none; */
   justify-content: center;
 }
 
@@ -224,6 +245,10 @@ li:has(.nav__list_item.active) > a {
     height: 100%;
     align-items: flex-start;
     justify-content: flex-start;
+  }
+
+  nav li:last-of-type {
+    margin-top: 3.25rem;
   }
 
   .nav__page_indicator {
