--- a/css/books.css
+++ b/css/books.css
@@ -1,12 +1,10 @@
+/* -- BOOKS PAGE -- */
 .books {
     position: fixed;
     display: flex;
     flex-direction: column;
-    /* gap: 5rem; */
     gap: 1.25rem;
-
     width: 100%;
-    /* height: 28.125rem; */
 }
 
 .books__title {
@@ -36,7 +34,6 @@
 }
 
 .books_gallery {
-    /* margin-top: 3.75rem; */
     display: flex;
 
     z-index: 1;
@@ -78,6 +75,126 @@
     filter: brightness(80%);
 }
 
+/* -- SINGLE BOOKS -- */
+/* -- ------------ -- */
+
+.books_single.single {
+    padding-top: 1.875rem;
+    display: flex;
+    flex-direction: column;
+    color: var(--color-warm-black);
+    margin-bottom: 3.125rem;
+}
+
+.books_single .books_single__header {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 1.875rem;
+}
+
+.books_single .books_single__header-redirect,
+.books_single .books_single__header-title {
+    display: flex;
+    font-size: 1.5rem;
+    line-height: 2.45rem;
+    font-weight: 600;
+    margin: 0;
+}
+
+.books_single .books_single__content_wrapper {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.books_single .books_single__content_wrapper > .merge {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1.25rem;
+}
+
+.books_single__content_wrapper > .merge > .books_single__content_wrapper-img_wrapper {
+    max-height: 50vh;
+    overflow: hidden;
+}
+
+.books_single__content_wrapper > .merge > .books_single__content_wrapper-content{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1.25rem;
+
+    font-size: 1.125rem;
+    line-height: 1.625rem;
+    font-weight: normal;
+}
+
+.merge > .books_single__content_wrapper-content .content_info {
+    color: var(--color-grey-600);
+    font-size: 1.125rem;
+    line-height: 1.625rem;
+    font-weight: normal;
+}
+
+.merge > .books_single__content_wrapper-content .content_title {
+    font-size: 2rem;
+    line-height: 2.45rem;
+    font-weight: normal;
+}
+
+.books_single__content_wrapper-img_wrapper > img.portrait {
+    /* max-width: 50vw; */
+    width: 100%;
+    height: 100%;
+    /* max-height: 708px; */
+    object-fit: cover;
+    object-position: center;
+}
+
+.books_single__content_wrapper-img_wrapper > img.landscape,
+.books_single__content_wrapper-img_wrapper > img.square {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    object-position: center;
+}
+
+.books_single__post_navigation {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1.25rem;
+}
+
+.books_single__post_navigation .navigation_container {
+    width: 2.5rem;
+    height: 2.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.books_single__post_navigation a {
+    width: 2.5rem;
+    height: 2.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: var(--color-warm-black) solid 0.125rem;
+}
+
+
+.books_single__post_navigation a:hover {
+    background-color: var(--color-grey-300);
+}
+.books_single__post_navigation a:active {
+    background-color: var(--color-grey-600);
+}
+
 @media screen and (min-width: 550px) {
 
     .books_gallery {
@@ -107,6 +224,8 @@
 
 @media screen and (min-width: 1000px) {
 
+    /* -- BOOKS PAGE -- */
+
     .books__title {
         font-size: 4.25rem;
     }
@@ -133,8 +252,53 @@
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(1 1fr);
         grid-gap: 2.5rem;
-
-        /* grid-gap: 5rem; */
     }
 
+    /* -- BOOKS SINGLE -- */
+
+    .books_single.single {
+        padding-top: 5rem;
+        height: 100vh;
+    }
+
+    .books_single .books_single__header {
+        margin-bottom: 2.5rem;
+    }
+
+    .books_single .books_single__header-redirect,
+    .books_single .books_single__header-title {
+        font-size: 2rem;
+    }
+
+    .books_single .books_single__content_wrapper > .merge {
+        height: 100%;
+        flex-direction: row;
+        gap: 2.5rem;
+    }
+
+    .books_single__content_wrapper > .merge > .books_single__content_wrapper-img_wrapper {
+        /* max-width: 50%; */
+        max-width: 30vw;
+        max-height: 708px;
+    }
+
+    .books_single__content_wrapper > .merge > .books_single__content_wrapper-content {
+        width: 50%;
+        gap: 1.5rem;
+    }
+
+    .books_single__post_navigation {
+        gap: 2.5rem;
+        padding: 1.25rem 0;
+    }
+    
+    .books_single__post_navigation .navigation_container {
+        width: 3.75rem;
+        height: 3.75rem;
+    }
+    
+    .books_single__post_navigation a {
+        width: 3.75rem;
+        height: 3.75rem;
+    }
 }
