--- a/css/global.css
+++ b/css/global.css
@@ -101,6 +101,7 @@
   .slideshow-wrapper {
     /* height: 80vh; */
     /* height: 16.5rem;  */
-    aspect-ratio: 16/9;
+    /* aspect-ratio: 16/9; */
+    aspect-ratio: 19/11;
   }
 }
