--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,6 @@
 header {
   /* width: 18rem; */
+  position: fixed;
   z-index: 2;
   width: 100%;
   height: 4rem;
@@ -110,14 +111,15 @@ nav div h1 {
 }
 
 nav ul {
+  width: 10.2rem;
   display: flex;
   flex-direction: column;
   list-style: none;
   gap: 2.5rem;
-  align-items: center;  
+  align-items: center;
   
   /* Responsive Solution /Tommi */
-  justify-content: space-between;
+  justify-content: center;
   
 }
 
@@ -140,24 +142,14 @@ nav a:not(.logo) {
 /* List item "Joanna" */
 nav li:last-of-type {
   width: 10.2rem;
-  /* width: 100%; */
-  /* margin-top: 3.25rem; */
-  /* border: solid white 1px; */
 
   width: 100%;
   height: 6.375rem;
-  position: relative;
-  /* display: none; */
   justify-content: center;
 }
 
 nav li:last-of-type > a {
-  /* width: 100%; */
   padding: 1.25rem;
-
-
-  width: 122%;
-  position: absolute;
   border: var(--color-warm-white) solid 0.125rem;
 }
 
@@ -211,8 +203,9 @@ li:has(.nav__list_item.active) > a {
   }
   
   header {
-    width: 100%;
+    width: 18rem;
     height: 100%;
+    display: flex;
     background-color: var(--color-warm-black);
     border: none;
     position: fixed;  
@@ -223,14 +216,20 @@ li:has(.nav__list_item.active) > a {
   }
 
   nav {
-    padding: 3.75rem;
-    align-items: flex-start;
-    background-color: inherit;
     height: 100%;
-    display: block;
-    position: inherit;
+    padding: 3.75rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    /* display: block; */
+    /* position: inherit; */
     width: inherit;
     transform: translateY(0);
+
+
+    /* Responsive Solution /Tommi */
+    height: 822px;
   }
 
   nav div {
@@ -242,30 +241,43 @@ li:has(.nav__list_item.active) > a {
   }
 
   nav ul {
-    height: 100%;
-    align-items: flex-start;
-    justify-content: flex-start;
+    /* height: 100%; */
+    width: 100%;
+    /* align-items: flex-start; */
+    /* justify-content: flex-start; */
+    /* justify-content: space-between; */
   }
 
-  nav li:last-of-type {
-    margin-top: 3.25rem;
+  nav ul li {
+    width: 100%;
   }
-
   .nav__page_indicator {
     display: block;
   }
-
+  
+  /* List item "Joanna" */
   nav li:last-of-type {
+    width: 100%;
+    height: 6.375rem;
+    margin-top: 3.25rem;
     display: flex;
+    justify-content: center;
+    /* width: 10.2rem; */
+
+    position: relative;
   }
+
+  nav li:last-of-type > a {
+    /* width: 100%; */
+    width: 122%;
+    padding: 1.25rem;
+
+
+    position: absolute;
+    border: var(--color-warm-white) solid 0.125rem;
+}
 }
 
-@media screen and (min-width: 1000px) {
-  header {
-    width: 18rem;
-    display: flex;
-  }
-}
 
 .showMenu {
   transform: translateY(0);
