--- a/css/about.css
+++ b/css/about.css
@@ -11,12 +11,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 80px;
+  margin-top: 5rem;
   gap: 40px;
 }
 
 .about__content_joanna_wrapper {
-  margin-bottom: 80px;
+  margin-bottom: 5rem;
 }
 
 .about__content_bo_content,
@@ -30,14 +30,14 @@
 /* font sizes */
 .about__title {
   color: var(--color-warm-black);
-  font-size: 40px;
+  font-size: 2.5rem;
   margin: 0 0 20px 0;
   font-weight: 500;
 }
 
 .content_title {
   color: var(--color-warm-black);
-  font-size: 32px;
+  font-size: 2rem;
   font-weight: 400;
 }
 
@@ -45,7 +45,7 @@
 .about__content_bo_content p,
 .about__content_joanna_content p {
   color: var(--color-warm-black);
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 500;
 }
 
@@ -82,7 +82,7 @@
   gap: 12px;
   font-weight: bold;
   font-size: 16px;
-  margin: 16px 0 0 36px;
+  margin: 1rem 0 0 1rem;
 }
 
 .read-more-container img:hover,
@@ -95,58 +95,12 @@
   height: 19px;
 }
 
-@media screen and (min-width: 1000px) {
-  .about__content_text {
-    height: auto;
-  }
-
-  /* font sizes */
-  .about__title {
-    font-size: 72px;
-    font-weight: 500;
-  }
-
-  .content_title {
-    font-size: 48px;
-    font-weight: 400;
-  }
-
-  .about__content_text p,
-  .about__content_bo_content p,
-  .about__content_joanna_content p {
-    font-size: 18px;
-    font-weight: 500;
-  }
-
-  .contact-info-joanna li,
-  .contact-info-bo li {
-    color: var(--color-warm-black);
-    font-size: 24px;
-    font-weight: 400;
-  }
-
-  /* images */
-  .about__content_joanna_image,
-  .about__content_bo_image {
-    width: 471px;
-    height: 454px;
-  }
-
-  .about__content_joanna_image img,
-  .about__content_bo_image img {
-    width: 471px;
-    height: 454px;
-    object-fit: cover;
-    object-position: left top;
-  }
-}
-
 @media screen and (min-width: 700px) {
   .about__content_bo_wrapper {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    margin-top: 80px;
+    margin-top: 5rem;
     gap: 40px;
   }
 
@@ -154,14 +108,13 @@
     display: flex;
     flex-direction: row-reverse;
     align-items: flex-start;
-    margin-top: 80px;
+    margin-top: 5rem;
     gap: 40px;
   }
 
   /* font sizes */
   .content_title {
-    font-size: 32px;
-    font-weight: 400;
+    font-size: 2rem;
   }
   /* images */
   .about__content_joanna_image,
@@ -174,6 +127,49 @@
   .about__content_bo_image img {
     width: 375px;
     height: 361px;
+    object-fit: cover;
+    object-position: left top;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .about__content_text {
+    height: auto;
+  }
+
+  /* font sizes */
+  .about__title {
+    font-size: 4.5rem;
+  }
+
+  .content_title {
+    font-size: 3rem;
+  }
+
+  .about__content_text p,
+  .about__content_bo_content p,
+  .about__content_joanna_content p {
+    font-size: 1.125rem;
+  }
+
+  .contact-info-joanna li,
+  .contact-info-bo li {
+    color: var(--color-warm-black);
+    font-size: 1.5rem;
+    font-weight: 400;
+  }
+
+  /* images */
+  .about__content_joanna_image,
+  .about__content_bo_image {
+    width: 471px;
+    height: 454px;
+  }
+
+  .about__content_joanna_image img,
+  .about__content_bo_image img {
+    width: 471px;
+    height: 454px;
     object-fit: cover;
     object-position: left top;
   }
