--- a/css/header.css
+++ b/css/header.css
@@ -17,6 +17,12 @@ header {
   /* overflow: scroll; */
 }
 
+.menu-arrow {
+  transform: rotate(-90deg);
+  height: 0.75rem;
+  display: block;
+}
+
 .test {
   width: calc(100% - 2.5rem);
   margin: auto;
@@ -92,7 +98,7 @@ nav div {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  margin-bottom: 5rem;
+  margin-bottom: 3rem;
   display: none;
   flex-wrap: wrap;
 }
@@ -111,7 +117,6 @@ nav div h1 {
 }
 
 nav ul {
-  width: 10.2rem;
   display: flex;
   flex-direction: column;
   list-style: none;
@@ -149,29 +154,16 @@ nav li:last-of-type {
 }
 
 nav li:last-of-type > a {
-  padding: 1.25rem;
+  padding: 1rem 0.3rem 1rem 1rem;
+  width: 10.2rem;
   border: var(--color-warm-white) solid 0.125rem;
+  background-color: var(--color-warm-white);
+  color: var(--color-warm-black);
 }
 
 nav a:hover:not(.logo) {
   font-weight: 700;
   letter-spacing: 0em;
-}
-
-nav li:last-of-type > a:hover {
-  background-color: var(--color-grey-700);
-  
-  font-weight: 400;
-  letter-spacing: 0.03em;
-}
-
-nav li:last-of-type > a.active:hover {
-  background-color: var(--color-grey-700);
-  color: var(--color-warm-white);
-  border: var(--color-warm-white) solid 0.125rem;
-  
-  font-weight: 400;
-  letter-spacing: 0.03em;
 }
 
 .nav__list_item {
@@ -197,10 +189,33 @@ li:has(.nav__list_item.active) > a {
   display: none;
 }
 
+nav li:last-of-type > a:hover {
+  font-weight: 400;
+  letter-spacing: 0.03em;
+}
+
+
 @media screen and (min-width: 1000px) {
   .test {
     display: none;
   }
+
+  nav li:last-of-type > a:hover {
+    background-color: var(--color-grey-700);
+    stroke: var(--color-warm-black);
+    font-weight: 400;
+    letter-spacing: 0.03em;
+  }
+
+  nav li:last-of-type > a.active:hover {
+    background-color: var(--color-grey-700);
+    color: var(--color-warm-white);
+    border: var(--color-warm-white) solid 0.125rem;
+    
+    font-weight: 400;
+    letter-spacing: 0.03em;
+  }
+  
   
   header {
     width: 18rem;
@@ -259,7 +274,6 @@ li:has(.nav__list_item.active) > a {
   nav li:last-of-type {
     width: 100%;
     height: 6.375rem;
-    margin-top: 3.25rem;
     display: flex;
     justify-content: center;
     /* width: 10.2rem; */
@@ -271,11 +285,27 @@ li:has(.nav__list_item.active) > a {
     /* width: 100%; */
     width: 122%;
     padding: 1.25rem;
-
+    background-color: var(--color-warm-black);
+    color: var(--color-warm-white);
 
     position: absolute;
     border: var(--color-warm-white) solid 0.125rem;
 }
+
+  #menu-arrow {
+    stroke: var(--color-warm-white);
+  }
+
+  nav li:last-of-type > a:active #menu-arrow {
+    stroke: var(--color-warm-black);
+  }
+
+  nav li:last-of-type > a:active {
+    color: var(--color-warm-black);
+    background-color: var(--color-warm-white);
+    border: 1px solid var(--color-warm-black);
+  }
+
 }
 
 
