--- a/css/dropdown.css
+++ b/css/dropdown.css
@@ -33,10 +33,11 @@
   justify-content: space-between;
   padding: 1rem;
   border: solid 1px black;
-
+  cursor: pointer;
   font-size: 1rem;
   line-height: 1.62rem;
   font-weight: normal;
+  width: 17rem;
 }
 
 .dropdown-select-placeholder-active img {
@@ -45,11 +46,11 @@
 
 .dropdown-select-item {
   color: black;
-  /* width: 14rem; */
+  width: 17rem; 
   padding: 1rem;
   border-bottom: 1px solid black;
 
-  width: 100%;
+
 }
 .dropdown-select-item:hover {
   background-color: var(--color-grey-300);
@@ -63,9 +64,9 @@
     margin-top: 3.75rem;
   }
 
-  .dropdown-select-container {
+/*   .dropdown-select-container {
     width: 18.438rem;
-  }
+  } */
 
   .dropdown-select-placeholder {
     font-size: 1.5rem;
