--- a/css/about.css
+++ b/css/about.css
@@ -12,7 +12,7 @@
   flex-direction: column;
   align-items: center;
   margin-top: 5rem;
-  gap: 40px;
+  gap: 2.5rem;
 }
 
 .about__content_joanna_wrapper {
@@ -24,7 +24,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-self: flex-start;
 }
 
 /* font sizes */
@@ -47,6 +46,18 @@
   color: var(--color-warm-black);
   font-size: 1rem;
   font-weight: 500;
+}
+
+.contact-joanna-button a {
+  color: var(--color-warm-black);
+  font-size: 1rem;
+  font-weight: 400;
+}
+
+.contact-joanna-button,
+.contact-bo-button {
+  border: solid var(--color-warm-black) 2px;
+  padding: 1rem 1.25rem;
 }
 
 /* images */
@@ -112,6 +123,14 @@
     gap: 40px;
   }
 
+  .about__content_bo_content,
+  .about__content_joanna_content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 361px;
+  }
+
   /* font sizes */
   .content_title {
     font-size: 2rem;
@@ -150,6 +169,14 @@
   .about__content_bo_content p,
   .about__content_joanna_content p {
     font-size: 1.125rem;
+  }
+
+  .about__content_bo_content,
+  .about__content_joanna_content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 454px;
   }
 
   .contact-info-joanna li,
