--- a/css/about.css
+++ b/css/about.css
@@ -50,6 +50,7 @@
   color: var(--color-warm-black);
   font-size: 1rem;
   font-weight: 500;
+  line-height: 1.62rem;
 }
 
 .contact-joanna-button a {
