--- a/css/films.css
+++ b/css/films.css
@@ -38,7 +38,7 @@
     display: flex;
 
     z-index: 1;
-    margin-top: 33.125rem;
+    margin-top: 35.125rem;
     background-color: var(--color-warm-white);
 }
 
@@ -76,6 +76,153 @@
     filter: brightness(80%);
 }
 
+/* -- SINGLE FILMS -- */
+/* -- ------------ -- */
+
+.films_single.single {
+    padding-top: 1.875rem;
+    display: flex;
+    flex-direction: column;
+    color: var(--color-warm-black);
+}
+
+.films_single .films_single__header {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 1.875rem;
+}
+
+.films_single .films_single__header-redirect,
+.films_single .films_single__header-title {
+    display: flex;
+    font-size: 1.5rem;
+    line-height: 2.45rem;
+    font-weight: 600;
+    margin: 0;
+}
+
+.films_single .films_single__content_wrapper {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.films_single .films_single__content_wrapper > .merge {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1.25rem;
+}
+
+.films_single__content_wrapper > .merge > .films_single__content_wrapper-img_wrapper {
+    max-height: 70vh;
+    overflow: hidden;
+}
+
+.films_single__content_wrapper > .merge > .films_single__content_wrapper-content{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1.25rem;
+
+    font-size: 1.125rem;
+    line-height: 1.625rem;
+    font-weight: normal;
+}
+
+.merge > .films_single__content_wrapper-content .content_info {
+    color: var(--color-grey-600);
+    font-size: 1.125rem;
+    line-height: 1.625rem;
+    font-weight: normal;
+}
+
+.merge > .films_single__content_wrapper-content .content_title {
+    font-size: 2rem;
+    line-height: 2.45rem;
+    font-weight: normal;
+}
+
+.films_single__content_wrapper-img_wrapper > img.portrait {
+    /* max-width: 50vw; */
+    width: 100%;
+    height: 100%;
+    /* max-height: 708px; */
+    object-fit: cover;
+    object-position: center;
+}
+
+.films_single__content_wrapper-img_wrapper > img.landscape,
+.films_single__content_wrapper-img_wrapper > img.square {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    object-position: center;
+}
+
+.films_single__post_navigation {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1.25rem;
+}
+
+.films_single__post_navigation .navigation_container {
+    width: 2.5rem;
+    height: 2.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.films_single__post_navigation a {
+    width: 2.5rem;
+    height: 2.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: var(--color-warm-black) solid 0.125rem;
+}
+
+
+.films_single__post_navigation a:hover {
+    background-color: var(--color-grey-300);
+}
+.films_single__post_navigation a:active {
+    background-color: var(--color-grey-600);
+}
+
+.films_single__gallery.single {
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 1.25rem;
+    margin-bottom: 2.5rem;
+}
+
+.films_single__gallery.single .films_single__gallery-title{
+    width: 100%;
+    font-size: 1.25rem;
+    line-height: 1.5rem;
+    font-weight: bold;
+}
+
+.films_single__gallery.single iframe{
+    aspect-ratio: 16/9;
+    width: 100%;
+    height: auto;
+}
+
+@media screen and (min-width: 390px) {
+
+    .films_gallery {
+        margin-top: 33.125rem;
+    }
+}
+
 @media screen and (min-width: 550px) {
 
     .films_gallery {
@@ -88,22 +235,31 @@
     .films_gallery {
         margin-top: 28.125rem;
     }
+
+    .films_single .films_single__content_wrapper > .merge {
+        flex-direction: row;
+    }
+
+    .films_single__post_navigation {
+        margin-top: 2.5rem;
+    }
 }
 
 @media screen and (min-width: 750px) {
 
     .films_gallery {
-        margin-top: 25.625rem;
+        margin-top: 26.625rem;
     }
 
     .films_gallery__wrapper {
         margin-bottom: 5rem;
         grid-gap: 1.25rem;
     }
-
 }
 
 @media screen and (min-width: 1000px) {
+
+    /* -- FILMS PAGE -- */
 
     .films__title {
         font-size: 4.25rem;
@@ -123,7 +279,7 @@
     }
 
     .films_gallery {
-        margin-top: 33.125rem;
+        margin-top: 34.125rem;
     }
 
     .films_gallery__wrapper {
@@ -131,6 +287,67 @@
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(1 1fr);
         grid-gap: 2.5rem;
+    }
+
+
+    /* -- FILMS SINGLE -- */
+
+    .films_single.single {
+        padding-top: 5rem;
+        /* height: 100vh; */
+        height: 100%;
+    }
+
+    .films_single .films_single__header-redirect,
+    .films_single .films_single__header-title {
+        font-size: 2rem;
+    }
+
+    .films_single .films_single__content_wrapper > .merge {
+        height: 100%;
+        flex-direction: row;
+        gap: 2.5rem;
+    }
+
+    .films_single__content_wrapper > .merge > .films_single__content_wrapper-img_wrapper {
+        /* max-width: 50%; */
+        max-width: 30vw;
+        max-height: 708px;
+    }
+
+    .films_single__content_wrapper > .merge > .films_single__content_wrapper-content {
+        width: 50%;
+        gap: 1.5rem;
+        min-height: 710px;
+    }
+
+    .films_single__post_navigation {
+        gap: 2.5rem;
+        padding: 1.25rem 0;
+
+        margin-top: 0;
+    }
+    
+    .films_single__post_navigation .navigation_container {
+        width: 3.75rem;
+        height: 3.75rem;
+    }
+    
+    .films_single__post_navigation a {
+        width: 3.75rem;
+        height: 3.75rem;
+    }
+
+    .films_single__gallery.single {
+        gap: 1.875rem;
+        margin-bottom: 5rem;
+    }
+
+    .films_single__gallery.single .films_single__gallery-title{
+        width: 100%;
+        font-size: 3rem;
+        line-height: 3.5rem;
+        font-weight: normal;
     }
 
 }
