--- a/css/footer.css
+++ b/css/footer.css
@@ -15,7 +15,7 @@
   background-color: var(--color-warm-white);
 }
 
-.footer-contact-text h3 {
+.footer-contact-text {
   color: var(--color-warm-black);
   font-size: 2rem;
   line-height: 2.45rem;
@@ -27,21 +27,25 @@
   font-size: 1.125rem;
   line-height: 1.625rem;
   font-weight: normal;
-  border: 2px solid var(--color-warm-black);
-  padding: 1.25rem;
   margin-bottom: 4rem;
   cursor: pointer;
+}
+.footer-contact-link > a {
+  width: 100%;
+  height: 100%;
+  padding: 1.25rem;
+  border: 2px solid var(--color-warm-black);
 }
 
 .footer-contact-link:visited {
   color: var(--color-warm-black);
 }
 
-.footer-contact-link:hover {
+.footer-contact-link a:hover {
   background-color: var(--color-grey-300);
 }
 
-.footer-contact-link:active {
+.footer-contact-link a:active {
   background-color: var(--color-grey-600);
 }
 
