--- a/css/header.css
+++ b/css/header.css
@@ -199,23 +199,6 @@ nav li:last-of-type > a:hover {
   .test {
     display: none;
   }
-
-  nav li:last-of-type > a:hover {
-    background-color: var(--color-grey-700);
-    stroke: var(--color-warm-black);
-    font-weight: 400;
-    letter-spacing: 0.03em;
-  }
-
-  nav li:last-of-type > a.active:hover {
-    background-color: var(--color-grey-700);
-    color: var(--color-warm-white);
-    border: var(--color-warm-white) solid 0.125rem;
-    
-    font-weight: 400;
-    letter-spacing: 0.03em;
-  }
-  
   
   header {
     width: 18rem;
@@ -223,7 +206,7 @@ nav li:last-of-type > a:hover {
     display: flex;
     background-color: var(--color-warm-black);
     border: none;
-    position: fixed;  
+    position: fixed;
   }
 
   .hamburger {
@@ -237,8 +220,6 @@ nav li:last-of-type > a:hover {
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
-    /* display: block; */
-    /* position: inherit; */
     width: inherit;
     transform: translateY(0);
 
@@ -249,6 +230,7 @@ nav li:last-of-type > a:hover {
 
   nav div {
     display: flex;
+    margin-bottom: 5rem;
   }
 
   nav div h1 {
@@ -260,7 +242,8 @@ nav li:last-of-type > a:hover {
     width: 100%;
     /* align-items: flex-start; */
     /* justify-content: flex-start; */
-    /* justify-content: space-between; */
+    justify-content: space-between;
+    max-height: 560px;
   }
 
   nav ul li {
@@ -272,6 +255,8 @@ nav li:last-of-type > a:hover {
   
   /* List item "Joanna" */
   nav li:last-of-type {
+
+    margin-top: 3.25rem;
     width: 100%;
     height: 6.375rem;
     display: flex;
@@ -290,7 +275,25 @@ nav li:last-of-type > a:hover {
 
     position: absolute;
     border: var(--color-warm-white) solid 0.125rem;
-}
+  }
+
+  
+  nav li:last-of-type > a:hover {
+    background-color: var(--color-grey-700);
+    stroke: var(--color-warm-black);
+    font-weight: 400;
+    letter-spacing: 0.03em;
+  }
+
+  nav li:last-of-type > a.active:hover {
+    background-color: var(--color-grey-700);
+    color: var(--color-warm-white);
+    border: var(--color-warm-white) solid 0.125rem;
+    
+    font-weight: 400;
+    letter-spacing: 0.03em;
+  }
+  
 
   #menu-arrow {
     stroke: var(--color-warm-white);
