--- a/css/photos.css
+++ b/css/photos.css
@@ -2,11 +2,8 @@
     position: fixed;
     display: flex;
     flex-direction: column;
-    /* gap: 5rem; */
     gap: 1.25rem;
-
     width: 100%;
-    /* height: 28.125rem; */
 }
 
 .photos__title {
@@ -87,6 +84,126 @@
     height: 100%;
 }
 
+/* -- SINGLE PHOTOS -- */
+/* -- ------------ -- */
+
+.photos_single.single {
+    padding-top: 1.875rem;
+    display: flex;
+    flex-direction: column;
+    color: var(--color-warm-black);
+    margin-bottom: 3.125rem;
+}
+
+.photos_single .photos_single__header {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 1.875rem;
+}
+
+.photos_single .photos_single__header-redirect,
+.photos_single .photos_single__header-title {
+    display: flex;
+    font-size: 1.5rem;
+    line-height: 2.45rem;
+    font-weight: 600;
+    margin: 0;
+}
+
+.photos_single .photos_single__content_wrapper {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.photos_single .photos_single__content_wrapper > .merge {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1.25rem;
+}
+
+.photos_single__content_wrapper > .merge > .photos_single__content_wrapper-img_wrapper {
+    max-height: 70vh;
+    overflow: hidden;
+}
+
+.photos_single__content_wrapper > .merge > .photos_single__content_wrapper-content{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1.25rem;
+
+    font-size: 1.125rem;
+    line-height: 1.625rem;
+    font-weight: normal;
+}
+
+.merge > .photos_single__content_wrapper-content .content_info {
+    color: var(--color-grey-600);
+    font-size: 1.125rem;
+    line-height: 1.625rem;
+    font-weight: normal;
+}
+
+.merge > .photos_single__content_wrapper-content .content_title {
+    font-size: 2rem;
+    line-height: 2.45rem;
+    font-weight: normal;
+}
+
+.photos_single__content_wrapper-img_wrapper > img.portrait {
+    width: 100%;
+    height: 100%;
+    max-height: 708px;
+    object-fit: cover;
+    object-position: center;
+}
+
+.photos_single__content_wrapper-img_wrapper > img.landscape,
+.photos_single__content_wrapper-img_wrapper > img.square {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    object-position: center;
+}
+
+.photos_single__post_navigation {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1.25rem;
+}
+
+.photos_single__post_navigation .navigation_container {
+    width: 2.5rem;
+    height: 2.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.photos_single__post_navigation a {
+    width: 2.5rem;
+    height: 2.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: var(--color-warm-black) solid 0.125rem;
+}
+
+
+.photos_single__post_navigation a:hover {
+    background-color: var(--color-grey-300);
+}
+.photos_single__post_navigation a:active {
+    background-color: var(--color-grey-600);
+}
+
+
 @media screen and (min-width: 750px) {
     .photos_gallery__wrapper.mobile_wrapper{
         gap: 1.25rem;
@@ -99,7 +216,39 @@
     }
 }
 
+
+@media screen and (min-width: 390px) {
+
+    .photos_gallery {
+        margin-top: 33.125rem;
+    }
+}
+
+@media screen and (min-width: 550px) {
+
+    .photos_gallery {
+        margin-top: 30.125rem;
+    }
+
+    .photos_single__content_wrapper-img_wrapper > img.portrait {
+        object-fit: contain;
+    }
+}
+
+@media screen and (min-width: 650px) {
+
+    .photos_gallery {
+        margin-top: 28.125rem;
+    }
+
+    .photos_single__post_navigation {
+        margin-top: 2.5rem;
+    }
+}
+
 @media screen and (min-width: 1000px) {
+
+    /* -- PHOTOS PAGE -- */
 
     .photos__title {
         font-size: 4.25rem;
@@ -135,5 +284,57 @@
     .photos_gallery__wrapper .photos_gallery__wrapper_column_2,
     .photos_gallery__wrapper .photos_gallery__wrapper_column_3 {
     gap: 2.5rem;
+    }
+
+    /* -- PHOTOS SINGLE -- */
+
+    .photos_single.single {
+        padding-top: 5rem;
+        /* height: 100vh; */
+        height: 100%;
+    }
+
+    .photos_single .photos_single__header-redirect,
+    .photos_single .photos_single__header-title {
+        font-size: 2rem;
+    }
+
+    .photos_single .photos_single__content_wrapper > .merge {
+        height: 100%;
+        flex-direction: row;
+        gap: 2.5rem;
+    }
+
+    .photos_single__content_wrapper > .merge > .photos_single__content_wrapper-img_wrapper {
+        /* max-width: 50%; */
+        max-width: 50%;
+        max-height: 708px;
+    }
+
+    .photos_single__content_wrapper-img_wrapper > img.portrait {
+        object-fit: cover;
+    }
+
+    .photos_single__content_wrapper > .merge > .photos_single__content_wrapper-content {
+        width: 50%;
+        gap: 1.5rem;
+        min-height: 710px;
+    }
+
+    .photos_single__post_navigation {
+        gap: 2.5rem;
+        padding: 1.25rem 0;
+        
+        margin-top: 0;
+    }
+    
+    .photos_single__post_navigation .navigation_container {
+        width: 3.75rem;
+        height: 3.75rem;
+    }
+    
+    .photos_single__post_navigation a {
+        width: 3.75rem;
+        height: 3.75rem;
     }
 }
